--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "concat-stream": "~1.4.1",
     "okay": "~0.3.0",
     "async": "~0.2.10"
+  },
+  "devDependencies": {
+    "mocha": "^1.19.0",
+    "okay": "^0.3.0"
   }
 }
